<resources>
    <string name="app_name">Library</string>
    <string name="version" translatable="false">Non-functional UI concept</string>
    <string name="not_implemented">Not implemented yet.</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_lent">Most lent</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_genres">Genres</string>
    <string name="menu_history">Your history</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Log in</string>
    <string name="new_account_button_text">Create a new account</string>
    <string name="forgot_password"><u>Have you forgot your password?</u></string>
    <string name="forgot_passwd_info">Contact an administrator to reset your password.</string>

    <string name="alert_password_reset">Your password\'s account has been reset. You will need to enter a new password to continue.</string>

    <string name="new_account">New account</string>
    <string name="ask_id">Your personal ID</string>
    <string name="ask_name">What is your full name?</string>
    <string name="email_address">email address</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="new_account_fields">Please fill all the fields to continue.</string>
    <string name="new_account_invalid_email">The email address introduced is not valid.</string>
    <string name="password_not_match">The passwords do not match.</string>

    <string name="search_here">Search for this title:</string>
    <string name="search_button">Search</string>

    <!-- Placeholders -->
    <string name="placeholder_username" translatable="false">Àlex Hernández</string>
    <string name="placeholder_mail" translatable="false">a23ahernandez@inslaferreria.cat</string>

    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>